--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ body {
   font-family: 'Poppins', sans-serif;
   background-color: var(--dark-bg);
   color: var(--text-color);
+  -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
 }
 
 header {
